add return a tuple (seems work on gcc7.2)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,7 +43,7 @@ foreach(src ${SRCS})
     set(binName "${PROJECT_NAME}_${subfix}")
     message(STATUS "Buidling ${binName} for ${src}...")
     add_executable (${binName} ${HEADERS} ${src})
-    target_link_libraries(${libName} gtest_main)
+    target_link_libraries(${binName} gtest_main)
     # message(STATUS "whetherOrNotAddTest: ${whetherOrNotAddTest}")
     if (${whetherOrNotAddTest})
         message(STATUS "Add test for ${binName}")
